syntax = "proto3";

package dev.mgray.db.schema.customer;

option java_multiple_files = true;
option java_package = "dev.mgray.schema.customer";
option java_outer_classname = "CustomerProto";

message CustomerInfo {
  string display_name = 1;
  string user_name = 2;
}

message Session {
  string session_id = 1;
}

message Security {
  string password = 1;
  string salt = 2;
}